<resources>
    <string name="app_name">UnforgetIt</string>
    <string name="active_tasks_title">ACTIVE</string>
    <string name="time_is_out_title">TIME IS OUT</string>
    <string name="done_title">DONE</string>
    <string name="task_title_hint">Task title</string>
    <string name="add_title">Add new task</string>
    <string name="save_button">Save</string>
    <string name="priority_hint">Select priority level</string>
    <string name="low_priority">Low</string>
    <string name="normal_priority">Normal</string>
    <string name="high_priority">High</string>
    <string name="date_hint">Pick date</string>
    <string name="time_hint">Pick time</string>
    <string name="exit_message">Discard changes?</string>
    <string name="discard">discard</string>
    <string name="error_empty_title">type title</string>
    <string name="title_alert_toast">Please, enter task title!</string>
    <string name="date_time_alert_toast">Please, pick date and time!</string>
    <string name="task_created_toast">New task created. Click on task icon to move it to DONE.</string>
    <string name="task_updated_toast">Task updated.</string>
    <string name="task_deleted_toast">Task deleted.</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_title">Edit task</string>
    <string name="context_menu_title">Select the action</string>
    <string name="alarm_hint">Add  notification</string>
    <string name="no_notification">No notification</string>
    <string name="ten_min_notification">10 minutes</string>
    <string name="thirty_min_notification">30 minutes</string>
    <string name="notification_title">Unforget it: time to&#8230;</string>
    <string name="cancel">Cancel</string>

</resources>
